--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,11 @@ button:hover {
   transform: translateY(2px);
   box-shadow: 0 1px 1px 0 rgba(244, 243, 238, 0.10),
 }
+
+#new-item {
+  user-select: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
